--- a/tables/results/internal.tex
+++ b/tables/results/internal.tex
@@ -1,4 +1,4 @@
-\begin{table}[ht]
+\begin{table}[h]
 \centering
 \caption{\label{tab:internal}Uses of .internal APIs externally}
 \begingroup\scriptsize
