--- a/tables/results/standard-api-usage.tex
+++ b/tables/results/standard-api-usage.tex
@@ -1,25 +1,43 @@
-% latex table generated in R 4.1.1 by xtable 1.8-4 package
-% Sun Oct 24 16:55:02 2021
+% latex table generated in R 4.2.0 by xtable 1.8-4 package
+% Sun Aug 28 06:53:00 2022
+\begin{landscape}
 \begin{table*}[ht]
 \centering
-\caption{\label{tab:usage-distribution}Usage Distribution of API Elements by Clients: Method Invocations, Field Accesses, and Classes Subtyped.\\ Clients did not use library annotations.} 
-\begingroup\scriptsize
-\begin{tabular}{l!{\color{verylightgray}\vrule}rrrr!{\color{verylightgray}\vrule}rrrr!{\color{verylightgray}\vrule}rrrr}
-& \multicolumn{4}{c!{\color{verylightgray}\vrule}}{Methods} & \multicolumn{4}{c!{\color{verylightgray}\vrule}}{Fields} & \multicolumn{4}{c}{Subtyping}\\
- & clients  &  total & distinct  & total   & clients   &  total & distinct   & total  & clients  & total & distinct   & total  \\ 
-Library  & using & in lib & used & used & using & in lib & used & used & using & in lib & used & used
-  \\ \arrayrulecolor{verylightgray}\hline
-fastjson & 6 & 1631 & 13 & 16 & 3 & 512 & 5 & 6 & 0 & 190 & 0 & 0 \\ 
-  commons-collections4 & 7 & 3561 & 17 & 19 & 2 & 142 & 9 & 9 & 1 & 358 & 1 & 1 \\ 
-  commons-io & 8 & 1257 & 18 & 24 & 2 & 116 & 3 & 3 & 0 & 163 & 0 & 0 \\ 
-  joda-time & 5 & 3406 & 31 & 33 & 3 & 202 & 2 & 3 & 0 & 145 & 0 & 0 \\ 
-  gson & 7 & 679 & 70 & 110 & 4 & 79 & 3 & 4 & 3 & 60 & 4 & 6 \\ 
-  json & 5 & 258 & 25 & 34 & 2 & 18 & 1 & 2 & 0 & 21 & 0 & 0 \\ 
-  jsoup & 6 & 1032 & 79 & 117 & 0 & 142 & 0 & 0 & 2 & 100 & 3 & 3 \\ 
-  slf4j-api & 46 & 378 & 68 & 180 & 0 & 22 & 0 & 0 & 7 & 29 & 9 & 25 \\ 
-  jackson-databind & 15 & 675 & 88 & 115 & 12 & 376 & 35 & 48 & 12 & 148 & 20 & 35 \\ 
-  jackson-core & 9 & 1996 & 124 & 154 & 9 & 611 & 39 & 65 & 6 & 117 & 12 & 15 \\ 
-  h2 & 3 & 6712 & 8 & 8 & 0 & 1699 & 0 & 0 & 0 & 662 & 0 & 0 \\ 
+\begingroup \small
+\caption{\label{tab:usage-distribution}Usage Distribution of API Elements by Clients: Method Invocations, Field Accesses, Classes Subtyped and Annotations. Clients almost universally do not use annotations.} 
+\begin{tabular}{l!{\color{verylightgray}\vrule}rrrr!{\color{verylightgray}\vrule}rrrr}
+& \multicolumn{4}{c!{\color{verylightgray}\vrule}}{Methods} & \multicolumn{4}{c}{Fields}\\
+Library & \# clients & total in lib & distinct used & total used & clients using & total in lib & distinct used & total used\\ 
+   \arrayrulecolor{verylightgray}\hline
+fastjson & 26 & 1631 & 13 & 16 & 3 & 512 & 5 & 6 \\ 
+  commons-collections4 & 7 & 3561 & 17 & 19 & 2 & 142 & 9 & 9 \\ 
+  commons-io & 9 & 1257 & 18 & 24 & 2 & 116 & 3 & 3 \\ 
+  joda-time & 9 & 3406 & 31 & 33 & 3 & 202 & 2 & 3 \\ 
+  gson & 17 & 679 & 70 & 110 & 4 & 79 & 3 & 4 \\ 
+  json & 5 & 258 & 25 & 34 & 2 & 18 & 1 & 2 \\ 
+  jsoup & 6 & 1032 & 79 & 117 & 0 & 142 & 0 & 0 \\ 
+  slf4j-api & 89 & 378 & 68 & 180 & 0 & 22 & 0 & 0 \\ 
+  jackson-databind & 23 & 675 & 88 & 115 & 12 & 376 & 35 & 48 \\ 
+  jackson-core & 13 & 1996 & 124 & 154 & 9 & 611 & 39 & 65 \\ 
+  h2 & 3 & 6712 & 8 & 8 & 1 & 1699 & 1 & 1 \\ \\
+  \end{tabular}
+  
+  \begin{tabular}{l!{\color{verylightgray}\vrule}rrrr}
+ & \multicolumn{4}{c!{\color{verylightgray}\vrule}}{Subtyping}\\
+ Library & \# clients &  total in lib & distinct used & total used \\ 
+   \arrayrulecolor{verylightgray}\hline
+fastjson & 1 & 190 & 1 & 1\\ 
+  commons-collections4 & 3 & 358 & 1 & 1 \\ 
+  commons-io & 2 & 163 & 0 & 0 \\ 
+  joda-time & 1 & 145 & 1 & 1 \\ 
+  gson & 6 & 60 & 4 & 6 \\ 
+  json & 1 & 21 & 1 & 1 \\ 
+  jsoup & 3 & 100 & 3 & 3 \\ 
+  slf4j-api & 9 & 29 & 9 & 25 \\ 
+  jackson-databind & 10 & 148 & 20 & 35 \\ 
+  jackson-core & 13 & 117 & 12 & 15 \\ 
+  h2 & 1 & 662 & 1 & 1 \\ 
 \end{tabular}
 \endgroup
 \end{table*}
+\end{landscape}
